--- a/Projects/01_projects/theme.html
+++ b/Projects/01_projects/theme.html
@@ -8,20 +8,21 @@
 
 </head>
 <body>
-    <!-- <div class="header">
-        <div style="float: left;padding-right: 20px; text-decoration: none; padding: 0%;"><button>Home</button></div>
-        <div ><button>Github</button></div>
-    </div><br><hr> -->
+    <div class="outer-div">
+    <div class="container">
+        <div id="home" class="header"><a href="/Projects/projects.html">Home</a></div>
+        <div id="github" class="header"><a href="">Github</a></div>
+    </div>
     <h2 style="color: orange">background Colour Switcher</h1>
     <button id="gray">Gray</button>
     <button id="yellow">Yellow</button>
     <button id="red">Red</button>
     <button id="green">Green</button>
     <button id="black">black</button>
-    
+    </div>
 
 
-    
+
     <script src="theme.js"></script>
 </body>
 
