--- a/Projects/projects.html
+++ b/Projects/projects.html
@@ -1,20 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects</title>
     <link rel="stylesheet" href="projects.css">
-    
+
 </head>
+
 <body>
     <div class="outer-div">
-    <button class="btn" id="one"><a href="01_projects/theme.html">Project One - Colour Change  </a></button><br><br>
-    <button class="btn" id="Two"><a> Project Two - BMI Calculater</a></button><br><br>
-    <button class="btn" id="Three"><a> Project Three - </a></button>
-
+    <div class="container">
+        <div id="home" class="header"><a href="/Projects/projects.html">Home</a></div>
+        <div id="github" class="header"><a href="/Projects/projects.html">Github</a></div>
+    </div>
+    <div>
+    
+        <button class="btn" id="one"><a href="01_projects/theme.html">Project One - Colour Change </a></button><br><br>
+        <button class="btn" id="Two"><a href="02_BMICalculater_Project/bmi.html"> Project Two - BMI Calculater</a></button><br><br>
+        <button class="btn" id="Three"><a href=""> Project Three - </a></button>
+</div>
     </div>
 
     <!-- <script src="projects.js"></script> -->
 </body>
+
 </html>
