--- a/Projects/02_BMICalculater_Project/bmi.html
+++ b/Projects/02_BMICalculater_Project/bmi.html
@@ -7,7 +7,12 @@
     <link rel="stylesheet" href="bmi.css">
 </head>
 <body style="background-color: grey;">
-    <div class="container">
+    <div class="outer-div">
+     <div class="container">
+        <div id="home" class="header"><a href="/Projects/projects.html">Home</a></div>
+        <div id="github" class="header"><a href="">Github</a></div>
+    </div>
+    <div id="container">
 
         <h1>BMI Calculater</h1>
     <form action="">
@@ -16,6 +21,7 @@
         <button>Calculate</button>
         <div id="result"></div>
     </form>
+    </div>
     </div>
 
     <script src="bmi.js"></script>
