--- a/Projects/01_projects/theme.html
+++ b/Projects/01_projects/theme.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,18 +8,19 @@
     <link rel="stylesheet" href="theme.css">
 
 </head>
+
 <body>
     <div class="outer-div">
-    <div class="container">
-        <div id="home" class="header"><a href="/Projects/projects.html">Home</a></div>
-        <div id="github" class="header"><a href="">Github</a></div>
-    </div>
-    <h2 style="color: orange">background Colour Switcher</h1>
-    <button id="gray">Gray</button>
-    <button id="yellow">Yellow</button>
-    <button id="red">Red</button>
-    <button id="green">Green</button>
-    <button id="black">black</button>
+        <div class="container">
+            <div id="home" class="header"><a href="/Projects/projects.html">Home</a></div>
+            <div id="github" class="header"><a href="https://github.com/amanraj953426">Github</a></div>
+        </div>
+        <h2 style="color: orange">background Colour Switcher</h1>
+            <button id="gray">Gray</button>
+            <button id="yellow">Yellow</button>
+            <button id="red">Red</button>
+            <button id="green">Green</button>
+            <button id="black">black</button>
     </div>
 
 
