--- a/Projects/02_BMICalculater_Project/bmi.html
+++ b/Projects/02_BMICalculater_Project/bmi.html
@@ -1,29 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BMI Calculater</title>
     <link rel="stylesheet" href="bmi.css">
 </head>
+
 <body style="background-color: grey;">
     <div class="outer-div">
-     <div class="container">
-        <div id="home" class="header"><a href="/Projects/projects.html">Home</a></div>
-        <div id="github" class="header"><a href="">Github</a></div>
-    </div>
-    <div id="container">
+        <div class="container">
+            <div id="home" class="header"><a href="/Projects/projects.html">Home</a></div>
+            <div id="github" class="header"><a href="https://github.com/amanraj953426">Github</a></div>
+        </div>
+        <div id="container">
 
-        <h1>BMI Calculater</h1>
-    <form action="">
-        <p><label>Height in CM: </label><input type="text" id="height"></p>
-        <p><label>Weight in KG:</label> <input type="text" id="Weight"></p>
-        <button>Calculate</button>
-        <div id="result"></div>
-    </form>
-    </div>
+            <h1>BMI Calculater</h1>
+            <form action="">
+                <p><label>Height in CM: </label><input type="text" id="height"></p>
+                <p><label>Weight in KG:</label> <input type="text" id="Weight"></p>
+                <button>Calculate</button>
+                <div id="result"></div>
+            </form>
+        </div>
     </div>
 
     <script src="bmi.js"></script>
 </body>
+
 </html>
