--- a/Projects/04_Guess_The_Number/guessTheNum.html
+++ b/Projects/04_Guess_The_Number/guessTheNum.html
@@ -12,7 +12,7 @@
     <div class="outer-div">
         <div class="container">
             <div id="home" class="header"><a href="/Projects/projects.html">Home</a></div>
-            <div id="github" class="header"><a href="">Github</a></div>
+            <div id="github" class="header"><a href="https://github.com/amanraj953426">Github</a></div>
         </div>
 
         <div id="container">
