--- a/Projects/projects.html
+++ b/Projects/projects.html
@@ -11,16 +11,22 @@
 
 <body>
     <div class="outer-div">
-    <div class="container">
-        <div id="home" class="header"><a href="/Projects/projects.html">Home</a></div>
-        <div id="github" class="header"><a href="/Projects/projects.html">Github</a></div>
-    </div>
-    <div>
-    
-        <button class="btn" id="one"><a href="01_projects/theme.html">Project One - Colour Change </a></button><br><br>
-        <button class="btn" id="Two"><a href="02_BMICalculater_Project/bmi.html"> Project Two - BMI Calculater</a></button><br><br>
-        <button class="btn" id="Three"><a href=""> Project Three - </a></button>
-</div>
+        <div class="container">
+            <div id="home" class="header"><a href="/Projects/projects.html">Home</a></div>
+            <div id="github" class="header"><a href="https://github.com/amanraj953426">Github</a></div>
+        </div>
+        <div>
+
+            <button class="btn" id="one"><a href="01_projects/theme.html">Project One - Colour Change
+                </a></button><br><br>
+            <button class="btn" id="Two"><a href="02_BMICalculater_Project/bmi.html"> Project Two - BMI
+                    Calculater</a></button><br><br>
+            <button class="btn" id="Three"><a href="03_clock/clock.html"> Project Three - Digital
+                    Clock</a></button><br><br>
+
+            <button class="btn" id="four"><a href="04_Guess_The_Number/guessTheNum.html"> Project Four - Game (Guess the
+                    Number)</a></button>
+        </div>
     </div>
 
     <!-- <script src="projects.js"></script> -->
