--- a/Projects/projects.html
+++ b/Projects/projects.html
@@ -25,7 +25,9 @@
                     Clock</a></button><br><br>
 
             <button class="btn" id="four"><a href="04_Guess_The_Number/guessTheNum.html"> Project Four - Game (Guess the
-                    Number)</a></button>
+                    Number)</a></button><br><br>
+            <button class="btn" id="five"><a href="05_backgroundChanger/background.html"> Project Five - Infinte
+                    backgroundChanger</a></button><br><br>
         </div>
     </div>
 
