--- a/Projects/05_backgroundChanger/background.html
+++ b/Projects/05_backgroundChanger/background.html
@@ -5,15 +5,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Set background</title>
+    <link rel="stylesheet" href="background.css">
 </head>
 
 <body>
-    <h2>Click start button to change background colour and stop to set</h2>
-    <button id="start">start</button>
-    <button id="stop">stop</button>
+    <div class="outer-div">
+        <div class="container">
+            <div id="home" class="header"><a href="/Projects/projects.html">Home</a></div>
+            <div id="github" class="header"><a href="https://github.com/amanraj953426">Github</a></div>
+        </div>
+        <h2>Click start button to change background colour and stop to set</h2>
+        <button id="start">start</button>
+        <button id="stop">stop</button>
+    </div>
 
 
-    <script src="background.js"></script>
+    <script src="background2.js"></script>
 </body>
 
 </html>
