adding new project (key press)

--- a/Projects/05_backgroundChanger/background.html
+++ b/Projects/05_backgroundChanger/background.html
@@ -17,6 +17,15 @@
         <h2>Click start button to change background colour and stop to set</h2>
         <button id="start">start</button>
         <button id="stop">stop</button>
+
+        <div class="keyContainer">
+            <div id="insert">
+                <div class="key">
+                    <h2>Press any key</h2>
+                    <div class="keycode"></div>
+                </div>
+            </div>
+        </div>
     </div>
 
 
